@@ -10,6 +10,8 @@
 	<name>Simulatest - Integration Test Harness Framework</name>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<h2.version>2.4.240</h2.version>
 		<junit.version>4.13.2</junit.version>
 		<junit-platform.version>1.11.4</junit-platform.version>
@@ -128,6 +130,15 @@
 				<configuration>
 					<release>21</release>
 					<encoding>UTF-8</encoding>
+					<proc>none</proc>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.2</version>
+				<configuration>
+					<argLine>-XX:+EnableDynamicAgentLoading</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
